2011-08-03  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (nnir-read-server-parm): Add an argument to restrict to
	server-variables only. This should fix a bug introduced with commit
	e1889675b7f4adf057833c5513c9374134c4e053.
	(nnir-run-query): 'nnir-search-engine should not be set from the global
	environment.

2011-08-02  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (nnir-search-thread): Position point on referring article
	line.
	(nnir-warp-to-article): Clean up summary buffers.

	* nnimap.el (nnimap-request-thread): Whitespace fix.

2011-08-02  Steve Purcell  <steve@sanityinc.com>  (tiny change)

	* nnimap.el (nnimap-get-groups): Decode "&" correctly.

2011-08-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* starttls.el (starttls-available-p): Renamed from
	`starttls-any-program-available' and changed return convention.

2011-07-31  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnmaildir.el (nnmaildir-request-accept-article): Don't call
	`unix-sync' unless it's defined.

2011-07-31  Marcus Harnisch  <marcus.harnisch@gmx.net>  (tiny change)

	* gnus-art.el (gnus-article-stop-animations): Use `elt' instead of
	`aref' for XEmacs compatibiltiy.

2011-07-31  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* spam.el (spam-fetch-field-fast): Rewrite slightly for clarity.

2011-07-31  Dave Abrahams  <dave@boostpro.com>  (tiny change)

	* gnus-sum.el (gnus-summary-refer-thread): Since lambdas aren't
	closures, quote the form properly (bug#9194).

2011-07-31  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-insert-new-articles): Clean up slightly.
	(gnus-summary-insert-new-articles): Protect against servers that are
	down.

2011-07-29  Daniel Dehennin  <daniel.dehennin@baby-gnu.org>

	* mm-decode.el (mm-dissect-buffer): Add a default content-disposition
	in mm handle if none is specified.

2011-07-24  Andrew Cohen  <cohen@andy.bu.edu>

	* nnimap.el (nnimap-make-thread-query): Quote message-ids for gmail.

2011-07-23  Andrew Cohen  <cohen@andy.bu.edu>
